--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - "27018:27017"
     restart: always
     volumes:
-      - ./config:/opt/mongo
-    command: bash /opt/mongo/deployment_scripts.sh
+      - ./config:/opt/mongo:ro
+    #command: bash /opt/mongo/deployment_scripts.sh
     # "cat /opt/mongo/hosts >> /etc/hosts"
     environment:
       - MONGODB_ADVERTISED_HOSTNAME=${MONGODB_ADVERTISED_HOSTNAME}
