file name update12

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
       - "27018:27017"
     restart: always
     volumes:
-      - ./config/mongo-keyfile:/opt/mongo/mongo-keyfile:ro
-      - ./config/hosts:/etc/hosts:ro
-#      - ./config:/opt/mongo:ro
+#      - ./config/mongo-keyfile:/opt/mongo/mongo-keyfile:ro
+#      - ./config/hosts:/etc/hosts:ro
+      - ./config:/opt/mongo:ro
     command: sh -c "sh /opt/mongo/deployment_scripts.sh"
     # "cat /opt/mongo/hosts >> /etc/hosts"
     environment:
