--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
 #      - ./config/mongo-keyfile:/opt/mongo/mongo-keyfile:ro
 #      - ./config/hosts:/etc/hosts:ro
-      - ./config:/opt/mongo:ro
+      - ./config:/opt/mongo
     #command: sh -c "sh /opt/mongo/deployment_scripts.sh"
     # "cat /opt/mongo/hosts >> /etc/hosts"
     environment:
@@ -22,4 +22,4 @@ services:
 #      - MONGODB_REPLICA_SET_KEY=${MONGODB_REPLICA_SET_KEY}
 #    entrypoint: [ "/usr/bin/mongod", "--keyFile", "/opt/mongo/mongo-keyfile", "--replSet", "rs0" ]
 #    entrypoint: [ "/usr/bin/mongod", "--replSet", "rs0" ]
-    entrypoint: [ "sh", "/opt/mongo/deployment_scripts.sh" ]
+    entrypoint: /opt/mongo/deployment_scripts.sh
