--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 
 services:
   slave:
-    image: mongo:3.4.0
+    image: mongo:4.0.6
     expose:
       - "27017"
     ports:
@@ -22,4 +22,4 @@ services:
 #      - MONGODB_REPLICA_SET_KEY=${MONGODB_REPLICA_SET_KEY}
 #    entrypoint: [ "/usr/bin/mongod", "--keyFile", "/opt/mongo/mongo-keyfile", "--replSet", "rs0" ]
 #    entrypoint: [ "/usr/bin/mongod", "--replSet", "rs0" ]
-    entrypoint: /opt/mongo/deployment_scripts.sh
+    entrypoint: [ "/opt/mongo/deployment_scripts.sh" ]
