--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,4 +22,4 @@ services:
 #      - MONGODB_REPLICA_SET_KEY=${MONGODB_REPLICA_SET_KEY}
 #    entrypoint: [ "/usr/bin/mongod", "--keyFile", "/opt/mongo/mongo-keyfile", "--replSet", "rs0" ]
 #    entrypoint: [ "/usr/bin/mongod", "--replSet", "rs0" ]
-    entrypoint: [ "/opt/mongo/deployment_scripts.sh" ]
+    entrypoint: [ "sh", "/opt/mongo/deployment_scripts.sh" ]
