--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "2"
 
 services:
   slave:
-    image: mongo:4.0.6
+    container_name: mongoslave
+    image: mongo:4-xenial
     expose:
       - "27017"
     ports:
